--- a/src/css/thirty-day-forecast.css
+++ b/src/css/thirty-day-forecast.css
@@ -10,6 +10,10 @@
 }
 
 .thirty-day-forecast__card-button {
+  width: 100%;
+  max-width: 130px;
   border-radius: 8px;
   font-size: 1rem;
+  display: flex;
+  justify-content: center;
 }
